--- a/WisdomBites/src/main/resources/WisdomBites/login_view.fxml
+++ b/WisdomBites/src/main/resources/WisdomBites/login_view.fxml
@@ -1,26 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.control.*?>
+<?import javafx.geometry.*?>
 
+<StackPane xmlns:fx="http://javafx.com/fxml"
+           fx:controller="WisdomBites.controller.LoginRegisterController"
+           prefWidth="1600" prefHeight="900"
+           style="-fx-background-color: #f5e1c0;">
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="WisdomBites.controller.LoginRegisterController"
+    <VBox spacing="20" alignment="TOP_CENTER" StackPane.alignment="TOP_CENTER">
+        <padding>
+            <Insets top="30"/>
+        </padding>
 
-            prefHeight="400.0" prefWidth="600.0">
+        <!-- Toggle Switch -->
+        <HBox alignment="CENTER" spacing="10">
+            <Label text="Log In" style="-fx-font-size: 20;" />
 
-            <Label text="email:" AnchorPane.leftAnchor="25" AnchorPane.topAnchor="25"/>
-            <TextField fx:id="emailField" AnchorPane.leftAnchor="100" AnchorPane.topAnchor="25"/>
+            <StackPane fx:id="toggleSwitch" onMouseClicked="#flipCard"
+                       prefWidth="60" prefHeight="30"
+                       style="-fx-background-color: black; -fx-background-radius: 15;">
+                <Circle fx:id="toggleThumb" radius="12" fill="white"/>
+            </StackPane>
 
-            <Label text="Password:" AnchorPane.leftAnchor="25" AnchorPane.topAnchor="75"/>
-            <TextField fx:id="passWordField" AnchorPane.leftAnchor="100" AnchorPane.topAnchor="75"/>
+            <Label text="Register" style="-fx-font-size: 20;" />
+        </HBox>
 
-            <Button text="Login" onAction="#loginButtonHandle" AnchorPane.topAnchor="100" AnchorPane.leftAnchor="25"/>
+        <!-- Card area -->
+        <StackPane prefWidth="1000" prefHeight="500"
+                   maxWidth="1000" maxHeight="500"
+                   style="-fx-background-color: #fcd38b; -fx-background-radius: 30; -fx-padding: 40; -fx-border-color: #ffc766; -fx-border-width: 2px; -fx-border-style: solid; -fx-border-radius: 30;">
+            <!-- LOGIN FORM -->
+            <VBox fx:id="loginPane" spacing="20" alignment="CENTER">
+                <Label text="Log In" style="-fx-font-size: 26; -fx-font-weight: bold;"/>
+                <TextField fx:id="loginEmailField" promptText="Email" styleClass="form-input" style="-fx-background-color: #e7b96c;"/>
+                <PasswordField fx:id="loginPasswordField" promptText="Password" styleClass="form-input" style="-fx-background-color: #e7b96c;"/>
+                <Button text="Let’s Go!" onAction="#loginButtonHandle" styleClass="submit-button" style="-fx-background-color: black; -fx-text-color: white;"/>
+            </VBox>
 
-            <Button text="Register!" AnchorPane.topAnchor="150" onAction="#switchToRegister"/>
+            <!-- REGISTER FORM -->
+            <VBox fx:id="registerPane" spacing="20" alignment="CENTER" visible="false">
+                <Label text="Register" style="-fx-font-size: 26; -fx-font-weight: bold;"/>
+                <HBox spacing="10" alignment="CENTER">
+                    <TextField fx:id="firstNameField" promptText="First Name" styleClass="form-input"/>
+                    <TextField fx:id="lastNameField" promptText="Last Name" styleClass="form-input"/>
+                </HBox>
+                <TextField fx:id="registerEmailField" promptText="Email" styleClass="form-input"/>
+                <TextField promptText="Confirm Email" styleClass="form-input"/>
+                <PasswordField fx:id="registerPasswordField" promptText="Password" styleClass="form-input"/>
+                <Button text="Let’s Go!" onAction="#registerButtonHandle" styleClass="submit-button"/>
+            </VBox>
+        </StackPane>
+    </VBox>
 
-</AnchorPane>
+</StackPane>
