--- a/WisdomBites/src/main/resources/WisdomBites/login_view.fxml
+++ b/WisdomBites/src/main/resources/WisdomBites/login_view.fxml
@@ -63,9 +63,12 @@
 
                 <TextField fx:id="registerEmailField" promptText="Email" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
 
-                <TextField promptText="Confirm Email" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
+                <TextField fx:id="confirmEmailField" promptText="Confirm Email" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
 
                 <PasswordField fx:id="registerPassWordField" promptText="Password" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
+                <Label fx:id="registerStatusLabel" style = "-fx-text-fill: red; -fx-font-size: 14;" />
+
+
 
                 <Button text="Let’s Go!" onAction="#registerButtonHandle" style="-fx-background-color: black; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: white;"/>
             </VBox>
