--- a/WisdomBites/src/main/resources/WisdomBites/login_view.fxml
+++ b/WisdomBites/src/main/resources/WisdomBites/login_view.fxml
@@ -48,6 +48,7 @@
                 <PasswordField fx:id="loginPassWordField" promptText="Password" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
 
                 <PasswordField fx:id="confirmPassWordField" promptText="Confirm Password" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
+                <Label fx:id="loginStatusLabel" style = "-fx-text-fill: red; -fx-font-size: 14;" />
 
                 <Button text="Let’s Go!" onAction="#loginButtonHandle" style="-fx-background-color: black; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: white;"/>
             </VBox>
