--- a/WisdomBites/src/main/resources/WisdomBites/home_page.fxml
+++ b/WisdomBites/src/main/resources/WisdomBites/home_page.fxml
@@ -41,6 +41,8 @@
                     style="-fx-background-color: #fdd28e; -fx-background-radius: 20; -fx-font-size: 18px;" />
             <Button fx:id="challengesButton" text="Daily Challenges"
                     style="-fx-background-color: #fdd28e; -fx-background-radius: 20; -fx-font-size: 18px;" />
+            <Button fx:id="logOutButton" text="log out!"
+                    style="-fx-background-color: #fdd28e; -fx-background-radius: 20; -fx-font-size: 18px;" />
         </HBox>
 
 
