--- a/WisdomBites/src/main/resources/WisdomBites/personalised_msg.fxml
+++ b/WisdomBites/src/main/resources/WisdomBites/personalised_msg.fxml
@@ -16,7 +16,7 @@
             <padding>
                 <Insets top="20" right="20" bottom="20" left="20"/>
             </padding>
-            <Button fx:id="backButton" text="Back" onAction="#handleBack"
+            <Button fx:id="backButton" text="← Back" onAction="#handleBack"
                     style="-fx-background-color: #fdd28e;
                -fx-background-radius: 20;
                -fx-font-size: 16px;
