--- a/WisdomBites/src/main/resources/WisdomBites/home_page.fxml
+++ b/WisdomBites/src/main/resources/WisdomBites/home_page.fxml
@@ -7,7 +7,9 @@
 <StackPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml"
            fx:controller="WisdomBites.controller.HomePageController"
            prefWidth="1600" prefHeight="900"
-           style="-fx-background-color: #f5e1c0;">
+           style="
+           -fx-background-color: #f5e1c0;
+            ">
 
     <VBox spacing="30" alignment="CENTER" StackPane.alignment="CENTER">
         <Label fx:id="welcomeLabel" style="
@@ -18,14 +20,28 @@
            -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 5, 0.5, 0, 1);
            -fx-padding: 0 0 15 0;
        "/>
+
         <!-- Top buttons -->
         <HBox spacing="20" alignment="CENTER">
             <Button fx:id="quotesButton" text="Quotes"
-                    style="-fx-background-color: #fdd28e; -fx-background-radius: 20; -fx-font-size: 18px;" />
+                    style="
+                    -fx-background-color: #fdd28e;
+                    -fx-background-radius: 20;
+                    -fx-font-size: 18px;
+                    "/>
+
             <Button fx:id="predictionsButton" text="Predictions"
-                    style="-fx-background-color: #fdd28e; -fx-background-radius: 20; -fx-font-size: 18px;" />
+                    style="-fx-background-color: #fdd28e;
+                    -fx-background-radius: 20;
+                    -fx-font-size: 18px;
+                    "/>
+
             <Button fx:id="todoButton" text="To-Do-List"
-                    style="-fx-background-color: #fdd28e; -fx-background-radius: 20; -fx-font-size: 18px;" />
+                    style="
+                    -fx-background-color: #fdd28e;
+                    -fx-background-radius: 20;
+                    -fx-font-size: 18px;
+                    "/>
         </HBox>
 
         <!-- Fortune cookie image -->
@@ -33,16 +49,33 @@
 
         <!-- Get Your Fortune Button -->
         <Button fx:id="fortuneButton" text="Get your fortune"
-                style="-fx-background-color: #fdd28e; -fx-background-radius: 20; -fx-font-size: 20px;" />
+                style="-fx-background-color: #fdd28e;
+                -fx-background-radius: 20;
+                -fx-font-size: 20px;
+                "/>
 
         <!-- Bottom buttons -->
         <HBox spacing="30" alignment="CENTER">
             <Button fx:id="progressButton" text="My Progress"
-                    style="-fx-background-color: #fdd28e; -fx-background-radius: 20; -fx-font-size: 18px;" />
+                    style="
+                    -fx-background-color: #fdd28e;
+                    -fx-background-radius: 20;
+                    -fx-font-size: 18px;
+                    "/>
+
             <Button fx:id="challengesButton" text="Daily Challenges"
-                    style="-fx-background-color: #fdd28e; -fx-background-radius: 20; -fx-font-size: 18px;" />
+                    style="
+                    -fx-background-color: #fdd28e;
+                    -fx-background-radius: 20;
+                    -fx-font-size: 18px;
+                    "/>
+
             <Button fx:id="logOutButton" text="log out!"
-                    style="-fx-background-color: #fdd28e; -fx-background-radius: 20; -fx-font-size: 18px;" />
+                    style="
+                    -fx-background-color: #fdd28e;
+                    fx-background-radius: 20;
+                    -fx-font-size: 18px;
+                    "/>
         </HBox>
 
 
