--- a/WisdomBites/src/main/resources/WisdomBites/login_view.fxml
+++ b/WisdomBites/src/main/resources/WisdomBites/login_view.fxml
@@ -20,11 +20,17 @@
 
             <StackPane fx:id="toggleSwitch" onMouseClicked="#flipCard"
                        prefWidth="60" prefHeight="30"
-                       style="-fx-background-color: black; -fx-background-radius: 15;">
+                       style="
+                       -fx-background-color: black;
+                       -fx-background-radius: 15;
+                       ">
+
                 <Circle fx:id="toggleThumb" radius="12" fill="white"/>
             </StackPane>
 
-            <Label text="Register" style="-fx-font-size: 20;" />
+            <Label text="Register" style="
+            -fx-font-size: 20;
+            "/>
         </HBox>
 
         <!-- Card area -->
@@ -43,35 +49,90 @@
 
                 <Label text="Log In" style="-fx-font-size: 26; -fx-font-weight: bold;"/>
 
-                <TextField fx:id="loginEmailField" promptText="Email" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
+                <TextField fx:id="loginEmailField" promptText="Email" style="
+                -fx-background-color: #e7b96c;
+                -fx-pref-height: 50;
+                -fx-font-size: 16;
+                -fx-text-fill: black;
+                -fx-prompt-text-fill: white;
+                "/>
 
-                <PasswordField fx:id="loginPassWordField" promptText="Password" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
+                <PasswordField fx:id="loginPassWordField" promptText="Password" style="
+                -fx-background-color: #e7b96c;
+                -fx-pref-height: 50;
+                -fx-font-size: 16;
+                -fx-text-fill: black;
+                -fx-prompt-text-fill: white;
+                "/>
 
                 <PasswordField fx:id="confirmPassWordField" promptText="Confirm Password" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
-                <Label fx:id="loginStatusLabel" style = "-fx-text-fill: red; -fx-font-size: 14;" />
+                <Label fx:id="loginStatusLabel" style ="
+                -fx-text-fill: red;
+                -fx-font-size: 14;
+                "/>
 
-                <Button text="Let’s Go!" onAction="#loginButtonHandle" style="-fx-background-color: black; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: white;"/>
+                <Button text="Let’s Go!" onAction="#loginButtonHandle" style="
+                -fx-background-color: black;
+                -fx-pref-height: 50;
+                -fx-font-size: 16;
+                -fx-text-fill: white;
+                "/>
             </VBox>
 
             <!-- REGISTER FORM -->
             <VBox fx:id="registerPane" spacing="20" alignment="CENTER" visible="false">
-                <Label text="Register" style="-fx-font-size: 26; -fx-font-weight: bold;"/>
+                <Label text="Register" style="
+                -fx-font-size: 26;
+                -fx-font-weight: bold;
+                "/>
 
                 <HBox spacing="10" alignment="CENTER">
-                    <TextField fx:id="firstNameField" promptText="First Name" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
-                    <TextField fx:id="lastNameField" promptText="Last Name" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
+                    <TextField fx:id="firstNameField" promptText="First Name" style="
+                    -fx-background-color: #e7b96c;
+                    -fx-pref-height: 50;
+                    -fx-font-size: 16;
+                    -fx-text-fill: black;
+                    -fx-prompt-text-fill: white;
+                    "/>
+
+                    <TextField fx:id="lastNameField" promptText="Last Name" style="
+                    -fx-background-color: #e7b96c;
+                    -fx-pref-height: 50;
+                    -fx-font-size: 16;
+                    -fx-text-fill: black;
+                    -fx-prompt-text-fill: white;
+                    "/>
+
                 </HBox>
 
-                <TextField fx:id="registerEmailField" promptText="Email" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
+                <TextField fx:id="registerEmailField" promptText="Email" style="
+                -fx-background-color: #e7b96c;
+                -fx-pref-height: 50;
+                -fx-font-size: 16;
+                -fx-text-fill: black;
+                -fx-prompt-text-fill: white;
+                "/>
 
-                <TextField fx:id="confirmEmailField" promptText="Confirm Email" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
+                <TextField fx:id="confirmEmailField" promptText="Confirm Email" style="
+                -fx-background-color: #e7b96c;
+                -fx-pref-height: 50;
+                -fx-font-size: 16;
+                -fx-text-fill: black;
+                -fx-prompt-text-fill: white;
+                "/>
 
                 <PasswordField fx:id="registerPassWordField" promptText="Password" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
-                <Label fx:id="registerStatusLabel" style = "-fx-text-fill: red; -fx-font-size: 14;" />
+                <Label fx:id="registerStatusLabel" style="
+                -fx-text-fill: red;
+                -fx-font-size: 14;
+                "/>
 
-
-
-                <Button text="Let’s Go!" onAction="#registerButtonHandle" style="-fx-background-color: black; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: white;"/>
+                <Button text="Let’s Go!" onAction="#registerButtonHandle" style="
+                -fx-background-color: black;
+                -fx-pref-height: 50;
+                -fx-font-size: 16;
+                -fx-text-fill: white;
+                "/>
             </VBox>
 
         </StackPane>
