--- a/WisdomBites/src/main/resources/WisdomBites/login_view.fxml
+++ b/WisdomBites/src/main/resources/WisdomBites/login_view.fxml
@@ -7,7 +7,7 @@
 <StackPane xmlns:fx="http://javafx.com/fxml"
            fx:controller="WisdomBites.controller.LoginRegisterController"
            prefWidth="1600" prefHeight="900"
-           style="-fx-background-color: #f5e1c0;">
+           style="-fx-background-color: #CCE3E9;">
 
     <VBox spacing="20" alignment="TOP_CENTER" StackPane.alignment="TOP_CENTER">
         <padding>
@@ -16,24 +16,24 @@
 
         <!-- Toggle Switch -->
         <HBox alignment="CENTER" spacing="10">
-            <Label text="Log In" style="-fx-font-size: 20;" />
 
+            <Label text="Login" style="-fx-font-size: 20; -fx-text-fill: #254E66;" />
             <StackPane fx:id="toggleSwitch" onMouseClicked="#flipCard"
                        prefWidth="60" prefHeight="30"
-                       style="-fx-background-color: black; -fx-background-radius: 15;">
-                <Circle fx:id="toggleThumb" radius="12" fill="white"/>
+                       style="-fx-background-color: white; -fx-background-radius: 15;">
+                <Circle fx:id="toggleThumb" radius="12" fill="#254E66"/>
             </StackPane>
 
-            <Label text="Register" style="-fx-font-size: 20;" />
+            <Label text="Register" style="-fx-font-size: 20; -fx-text-fill: #254E66;" />
         </HBox>
 
         <!-- Card area -->
-        <StackPane prefWidth="1000" prefHeight="500"
-                   maxWidth="1000" maxHeight="500"
-                   style="-fx-background-color: #fcd38b;
+        <StackPane prefWidth="1000" prefHeight="700"
+                   maxWidth="1000" maxHeight="700"
+                   style="-fx-background-color: white;
                           -fx-background-radius: 30;
                           -fx-padding: 60;
-                          -fx-border-color: #ffc766;
+                          -fx-border-color: #76AEBC;
                           -fx-border-width: 2;
                           -fx-border-style: solid;
                           -fx-border-radius: 30;">
@@ -41,37 +41,42 @@
             <!-- LOGIN FORM -->
             <VBox fx:id="loginPane" spacing="20" alignment="CENTER">
 
-                <Label text="Log In" style="-fx-font-size: 26; -fx-font-weight: bold;"/>
+                <Label text="Login" style="-fx-font-size: 36; -fx-font-weight: bold; -fx-text-fill: #254E66;"/>
 
-                <TextField fx:id="loginEmailField" promptText="Email" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
+                <TextField fx:id="loginEmailField" promptText="Email Address" style="-fx-background-color: #E7B96C; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: #254E66;"/>
 
-                <PasswordField fx:id="loginPassWordField" promptText="Password" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
+                <PasswordField fx:id="loginPassWordField" promptText="Password" style="-fx-background-color: #E7B96C; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: #254E66;"/>
 
-                <PasswordField fx:id="confirmPassWordField" promptText="Confirm Password" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
                 <Label fx:id="loginStatusLabel" style = "-fx-text-fill: red; -fx-font-size: 14;" />
 
-                <Button text="Let’s Go!" onAction="#loginButtonHandle" style="-fx-background-color: black; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: white;"/>
+                <Button text="Let’s Go!" onAction="#loginButtonHandle" style="-fx-background-color: #76AEBC; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: white;"/>
+
+                <Label text="Don't have an account? Register here"
+                       onMouseClicked="#flipCard"
+                       style="-fx-text-fill: #254E66; -fx-underline: true; -fx-font-size: 16; -fx-cursor: hand;"/>
+
             </VBox>
 
             <!-- REGISTER FORM -->
             <VBox fx:id="registerPane" spacing="20" alignment="CENTER" visible="false">
-                <Label text="Register" style="-fx-font-size: 26; -fx-font-weight: bold;"/>
+                <Label text="Register" style="-fx-font-size: 36; -fx-font-weight: bold; -fx-text-fill: #254E66;"/>
 
                 <HBox spacing="10" alignment="CENTER">
-                    <TextField fx:id="firstNameField" promptText="First Name" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
-                    <TextField fx:id="lastNameField" promptText="Last Name" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
+                    <TextField fx:id="firstNameField" promptText="First Name" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: #254E66;"/>
+                    <TextField fx:id="lastNameField" promptText="Last Name" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: #254E66;"/>
                 </HBox>
 
-                <TextField fx:id="registerEmailField" promptText="Email" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
+                <TextField fx:id="registerEmailField" promptText="Email" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: #254E66;"/>
 
-                <TextField fx:id="confirmEmailField" promptText="Confirm Email" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
+                <PasswordField fx:id="registerPassWordField" promptText="Password" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: #254E66;"/>
 
-                <PasswordField fx:id="registerPassWordField" promptText="Password" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: white;"/>
+                <PasswordField fx:id="confirmPasswordField" promptText="Confirm Password" style="-fx-background-color: #e7b96c; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: black; -fx-prompt-text-fill: #254E66;"/>
+
                 <Label fx:id="registerStatusLabel" style = "-fx-text-fill: red; -fx-font-size: 14;" />
 
 
 
-                <Button text="Let’s Go!" onAction="#registerButtonHandle" style="-fx-background-color: black; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: white;"/>
+                <Button text="Let’s Go!" onAction="#registerButtonHandle" style="-fx-background-color: #76AEBC; -fx-pref-height: 50; -fx-font-size: 16; -fx-text-fill: white;"/>
             </VBox>
 
         </StackPane>
