make changes to the fxml file for study tracker

--- a/WisdomBites/src/main/resources/WisdomBites/home_page.fxml
+++ b/WisdomBites/src/main/resources/WisdomBites/home_page.fxml
@@ -79,7 +79,7 @@
 
         <!-- Bottom buttons -->
         <HBox spacing="30" alignment="CENTER">
-            <Button fx:id="progressButton" text="My Progress"
+            <Button fx:id="studyTrackerButton" text="My Progress"
                     style="
                     -fx-background-color: #fdd28e;
                     -fx-background-radius: 20;
