--- a/WisdomBites/src/main/resources/WisdomBites/StudyTracker.fxml
+++ b/WisdomBites/src/main/resources/WisdomBites/StudyTracker.fxml
@@ -4,7 +4,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/17"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="studytrackerapp.studytrackercontroller">
+            fx:controller="WisdomBites.controller.StudyTrackerController">
 
     <top>
         <HBox alignment="CENTER" style="-fx-background-color: #F1B963; -fx-padding: 15;">
