--- a/WisdomBites/src/main/resources/WisdomBites/home_page.fxml
+++ b/WisdomBites/src/main/resources/WisdomBites/home_page.fxml
@@ -96,7 +96,7 @@
             <Button fx:id="logOutButton" text="log out!"
                     style="
                     -fx-background-color: #fdd28e;
-                    fx-background-radius: 20;
+                    -fx-background-radius: 20;
                     -fx-font-size: 16px;
                     "/>
         </HBox>
